--- a/index.css
+++ b/index.css
@@ -1,272 +1,276 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
-* {
-    font-family: 'Space Mono', monospace;
-    
+@media screen and (max-width: 1440px) {
+
+    * {
+        font-family: 'Space Mono', monospace;
+        
+    }
+
+    body {
+        background-color: hsl(185, 41%, 84%);
+        height: 100vh;
+    }
+
+    .container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        
+    }
+
+    .box {
+        background-color: hsl(0, 0%, 100%);
+        width: 800px;
+        height: 400px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border-radius: 20px;
+        margin-bottom: 60px;
+    }
+
+    .input {
+        flex-direction: column;
+        width: 340px;
+        height: 340px;
+        margin: 25px;
+        margin-right: 15px;
+        padding: 10px;
+    }
+
+    .result {
+        background-color:hsl(183, 100%, 15%);
+        flex-direction: column;
+        border-radius: 20px;
+        width: 300px;
+        height: 300px;
+        margin: 20px;
+        margin-left: 15px;
+        padding: 30px;
+    }
+
+    .bill-input, .people-input {
+        display: flex;
+        flex-direction: row;
+        width: 340px;
+        background-color: hsl(189, 41%, 97%);
+        position: absolute;
+        border-radius: 4px;
+    }
+
+    .bill-input:hover, .people-input:hover, .bill-input:active, .people-input:active {
+        border: 2px solid hsl(172, 67%, 45%);
+        
+    }
+
+    .bill-amount, .people-number {
+        margin-left: auto;
+        padding-right: 15px;
+        margin-top: 5px;
+        font-weight: bold;
+        color:hsl(183, 68%, 23%);
+        font-size: 20px;
+        background-color:hsl(189, 41%, 97%);
+        border: none;
+        text-align: right;
+        cursor: pointer;
+        width: 100%;
+        height: 36px;
+    }
+
+    .bill-amount:focus, .people-number:focus, .bill-amount:active, .people-number:active {
+        color: hsl(183, 68%, 23%);
+        outline: none;
+    }
+
+    .error .people-input {
+        border: 1px solid red;
+    }
+
+    .error .emsg-people {
+        visibility: visible;
+    }
+
+    .emsg-people {
+        color: red;
+        font-size: 12px;
+        visibility: hidden;
+    }
+
+    .brabra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .error .bill-input {
+        border: 1px solid red;
+    }
+
+    .error .emsg-bill {
+        visibility: visible;
+    }
+
+    .emsg-bill {
+        color: red;
+        font-size: 12px;
+        visibility: hidden;
+        font-weight: bold;
+    }
+
+    .tip-button {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto;
+        column-gap: 10px;
+        row-gap: 10px; 
+        margin-top: 10px;
+    }
+
+    .percent{
+        background-color: hsl(183, 100%, 15%);
+        border-radius: 4px;
+        box-shadow: none;
+        border: 1px solid;
+        color: hsl(0, 0%, 100%);
+        width: 107px;
+        height: 45px;
+        font-weight: bold;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+    .percent:hover, .percent-active:focus, .percent-active{
+        background-color: hsl(172, 67%, 45%);
+        color: hsl(183, 100%, 15%);
+        border: none;
+    }
+
+    /* .bill-image, .people-image {
+        background-color: hsl(189, 41%, 97%);
+        border-radius: 2px;
+        height: 25px;
+        margin-bottom: 20px;
+        color: hsl(183, 100%, 15%);
+    } */
+
+    label {
+        font-size: 12px;
+        color: grey;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
+
+    .result h2 {
+        color: hsl(0, 6%, 90%);
+        margin-bottom: 0px;
+        margin-top: 20px;
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .result p {
+        font-size: 12px;
+        color: hsl(184, 14%, 56%);
+        margin-top: 0px;
+        margin-bottom: 43px;
+        font-weight: bold;
+    }
+
+    .result button {
+        background-color:  hsl(183, 68%, 23%);
+        width: 300px;
+        color:rgba(70, 67, 67, 0.356);
+        border: none;
+        margin-top: 70px;
+        border-radius: 4px;
+        box-shadow: none;
+        height: 45px;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    .reset:enabled {
+        background-color: hsl(172, 67%, 45%);
+        color: hsl(183, 100%, 15%);
+        cursor: pointer;
+    }
+
+    .logo img {
+        margin: 70px;
+        height: 45px;
+        justify-items: center;
+        margin-top: 0px;
+        position: static;
+    }
+
+    img {
+        height: 15px;
+        margin: 13px;
+        position: absolute;
+    }
+
+    #tip-section {
+        margin-top: 70px;
+        margin-bottom: 20px;
+    }
+
+    #custom {
+        background-color: hsl(189, 41%, 97%);
+        border: none;
+        width: 100px;
+        height: 42px;
+        font-weight: bold;
+        font-size: 20px;
+        border-radius: 4px;
+        box-shadow: none;
+        text-align: right;
+        color: hsl(183, 68%, 23%);
+        cursor: pointer;
+    }
+    #custom:hover, #custom:active {
+        border: 1px solid hsl(172, 67%, 45%);
+        text-align: right;
+        color:hsl(183, 68%, 23%);
+        place-content: none;
+    }
+
+    #custom::placeholder {
+        color: hsl(183, 68%, 23%);
+        text-align: center;
+    }
+
+    #tip-amount, #total {
+        display: flex;
+        flex-direction: row;
+        width: 300px;
+        height: 90px;
+    }
+
+    .amount {
+        color: hsl(172, 67%, 45%);
+        font-weight: bold;
+        font-size: 40px;
+        margin-left: auto;
+        padding-top: 10px;
+    }
+
+    .total-amount {
+        color: hsl(172, 67%, 45%);
+        font-weight: bold;
+        font-size: 40px;
+        margin-left: auto;
+        padding-top: 10px;
+    }
+
 }
 
-body {
-    background-color: hsl(185, 41%, 84%);
-    height: 100vh;
-}
-
-.container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    
-}
-
-.box {
-    background-color: hsl(0, 0%, 100%);
-    width: 800px;
-    height: 400px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    margin-bottom: 60px;
-}
-
-.input {
-    flex-direction: column;
-    width: 340px;
-    height: 340px;
-    margin: 25px;
-    margin-right: 15px;
-    padding: 10px;
-}
-
-.result {
-    background-color:hsl(183, 100%, 15%);
-    flex-direction: column;
-    border-radius: 20px;
-    width: 300px;
-    height: 300px;
-    margin: 20px;
-    margin-left: 15px;
-    padding: 30px;
-}
-
-.bill-input, .people-input {
-    display: flex;
-    flex-direction: row;
-    width: 340px;
-    background-color: hsl(189, 41%, 97%);
-    position: absolute;
-    border-radius: 4px;
-}
-
-.bill-input:hover, .people-input:hover, .bill-input:active, .people-input:active {
-    border: 2px solid hsl(172, 67%, 45%);
-    
-}
-
-.bill-amount, .people-number {
-    margin-left: auto;
-    padding-right: 15px;
-    margin-top: 5px;
-    font-weight: bold;
-    color:hsl(183, 68%, 23%);
-    font-size: 20px;
-    background-color:hsl(189, 41%, 97%);
-    border: none;
-    text-align: right;
-    cursor: pointer;
-    width: 100%;
-    height: 36px;
-}
-
-.bill-amount:focus, .people-number:focus, .bill-amount:active, .people-number:active {
-    color: hsl(183, 68%, 23%);
-    outline: none;
-}
-
-.error .people-input {
-    border: 1px solid red;
-}
-
-.error .emsg-people {
-    visibility: visible;
-}
-
-.emsg-people {
-    color: red;
-    font-size: 12px;
-    visibility: hidden;
-}
-
-.brabra {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.error .bill-input {
-    border: 1px solid red;
-}
-
-.error .emsg-bill {
-    visibility: visible;
-}
-
-.emsg-bill {
-    color: red;
-    font-size: 12px;
-    visibility: hidden;
-    font-weight: bold;
-}
-
-.tip-button {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-    column-gap: 10px;
-    row-gap: 10px; 
-    margin-top: 10px;
-}
-
-.percent{
-    background-color: hsl(183, 100%, 15%);
-    border-radius: 4px;
-    box-shadow: none;
-    border: 1px solid;
-    color: hsl(0, 0%, 100%);
-    width: 107px;
-    height: 45px;
-    font-weight: bold;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.percent:hover, .percent-active:focus, .percent-active{
-    background-color: hsl(172, 67%, 45%);
-    color: hsl(183, 100%, 15%);
-    border: none;
-}
-
-/* .bill-image, .people-image {
-    background-color: hsl(189, 41%, 97%);
-    border-radius: 2px;
-    height: 25px;
-    margin-bottom: 20px;
-    color: hsl(183, 100%, 15%);
-} */
-
-h2 {
-    font-size: 12px;
-    color: grey;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    /* font-weight: bold; */
-}
-
-.result h2 {
-    color: hsl(0, 6%, 90%);
-    margin-bottom: 0px;
-    margin-top: 20px;
-}
-
-.result p {
-    font-size: 12px;
-    color: hsl(184, 14%, 56%);
-    margin-top: 0px;
-    margin-bottom: 43px;
-    font-weight: bold;
-}
-
-.result button {
-    background-color:  hsl(183, 68%, 23%);
-    width: 300px;
-    color:rgba(70, 67, 67, 0.356);
-    border: none;
-    margin-top: 70px;
-    border-radius: 4px;
-    box-shadow: none;
-    height: 45px;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.reset:enabled {
-    background-color: hsl(172, 67%, 45%);
-    color: hsl(183, 100%, 15%);
-    cursor: pointer;
-}
-
-.logo img {
-    margin: 70px;
-    height: 45px;
-    justify-items: center;
-    margin-top: 0px;
-    position: static;
-}
-
-img {
-    height: 15px;
-    margin: 13px;
-    position: absolute;
-}
-
-#tip-section {
-    margin-top: 70px;
-    margin-bottom: 20px;
-}
-
-#custom {
-    background-color: hsl(189, 41%, 97%);
-    border: none;
-    width: 100px;
-    height: 42px;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 4px;
-    box-shadow: none;
-    text-align: right;
-    color: hsl(183, 68%, 23%);
-    cursor: pointer;
-}
-#custom:hover, #custom:active {
-    border: 1px solid hsl(172, 67%, 45%);
-    text-align: right;
-    color:hsl(183, 68%, 23%);
-    place-content: none;
-}
-
-#custom::placeholder {
-    color: hsl(183, 68%, 23%);
-    text-align: center;
-}
-
-#tip-amount, #total {
-    display: flex;
-    flex-direction: row;
-    width: 300px;
-    height: 90px;
-}
-
-.amount {
-    color: hsl(172, 67%, 45%);
-    font-weight: bold;
-    font-size: 40px;
-    margin-left: auto;
-    padding-top: 10px;
-}
-
-.total-amount {
-    color: hsl(172, 67%, 45%);
-    font-weight: bold;
-    font-size: 40px;
-    margin-left: auto;
-    padding-top: 10px;
-}
-
-
-
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 540px), (max-device-height: 812px) {
     .container {
         justify-content: end;
     }
